deployment.yaml
# An Openshift deployment for mission-control
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mission-control-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mission-control
  template:
    metadata:
      labels:
        app: mission-control
    spec:
      containers:
        - name: mission-control
          image: mission-control:latest
          ports:
            - containerPort: 8080
